feat: apply dynamic colors

--- a/play-services-core/src/main/res/layout/login_assistant.xml
+++ b/play-services-core/src/main/res/layout/login_assistant.xml
@@ -76,8 +76,8 @@
                 android:paddingLeft="38dp"
                 android:paddingRight="38dp"
                 android:textAllCaps="true"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textSize="16sp" />
+                android:textAppearance="@style/TextAppearance.M3.Sys.Typescale.BodyLarge"
+                android:textColor="?attr/colorOnSurface" />
 
             <Button
                 android:id="@+id/next_button"
@@ -91,8 +91,8 @@
                 android:paddingLeft="38dp"
                 android:paddingRight="38dp"
                 android:textAllCaps="true"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textSize="16sp" />
+                android:textAppearance="@style/TextAppearance.M3.Sys.Typescale.BodyLarge"
+                android:textColor="?attr/colorOnSurface" />
         </RelativeLayout>
     </LinearLayout>
 
