--- a/play-services-core/src/main/res/layout/preference_switch_bar.xml
+++ b/play-services-core/src/main/res/layout/preference_switch_bar.xml
@@ -39,7 +39,7 @@
         android:paddingLeft="?attr/listPreferredItemPaddingLeft"
         android:paddingEnd="?attr/listPreferredItemPaddingEnd"
         android:paddingRight="?attr/listPreferredItemPaddingRight"
-        android:background="?attr/colorAccent"
+        android:background="@null"
         tools:background="?attr/colorControlActivated">
 
         <TextView
@@ -49,24 +49,23 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:ellipsize="end"
-            android:maxLines="2"
+            android:maxLines="1"
             android:paddingStart="56dp"
             android:paddingLeft="56dp"
             android:text="@{description}"
-            android:textAppearance="?attr/textAppearanceListItem"
-            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:textAppearance="@style/TextAppearance.M3.Sys.Typescale.HeadlineSmall"
             tools:text="Enabled" />
 
-        <androidx.appcompat.widget.SwitchCompat
+        <com.google.android.material.switchmaterial.SwitchMaterial
             android:id="@+id/switch_widget"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@null"
             android:layout_gravity="center_vertical"
             android:checked="@{checked}"
             android:enabled="@{enabled}"
             app:onCheckedChangeListener="@{(v, newStatus) -> callback.onChecked(newStatus)}"
-            app:thumbTint="#ffffff"
-            app:trackTint="#e1e2e3"
             tools:checked="true" />
     </LinearLayout>
 </layout>
