--- a/play-services-core/src/main/res/values/colors.xml
+++ b/play-services-core/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
 
     <color name="login_blue_theme_primary">#ff4285f4</color>
     <color name="login_blue_theme_primary_dark">#ff3367d6</color>
-    <color name="login_blue_theme_accent">#ffFFAB40</color>
+    <color name="login_blue_theme_accent">#ffffab40</color>
+    <color name="m3_theme_primary_dark">#ff9a82db</color>
 
 </resources>
