--- a/play-services-core/src/main/res/values/themes.xml
+++ b/play-services-core/src/main/res/values/themes.xml
@@ -16,9 +16,14 @@
 
 <resources>
 
-    <style name="Theme.LoginBlue" parent="Theme.LoginBlue.Base" />
+    <style name="AppTheme" parent="Theme.Material3.DayNight"/>
 
-    <style name="Theme.LoginBlue.Base" parent="Theme.AppCompat.DayNight">
+    <style name="Theme.Material3.DayNight" parent="Theme.Material3.Light">
+        <item name="colorPrimaryDark">@color/m3_theme_primary_dark</item>
+    </style>
+
+    <style name="Theme.LoginBlue" parent="Theme.LoginBlue.Base" />
+    <style name="Theme.LoginBlue.Base" parent="Theme.Material3.DayNight">
         <item name="colorPrimary">@color/login_blue_theme_primary</item>
         <item name="colorPrimaryDark">@color/login_blue_theme_primary_dark</item>
         <item name="colorAccent">@color/login_blue_theme_accent</item>
