--- a/play-services-core/src/main/res/xml/authenticator.xml
+++ b/play-services-core/src/main/res/xml/authenticator.xml
@@ -17,7 +17,7 @@
 <account-authenticator
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:accountPreferences="@xml/preferences_auth"
-    android:accountType="com.mgoogle"
+    android:accountType="@string/var_authenticator_account_type"
     android:customTokens="true"
     android:icon="@mipmap/ic_launcher"
     android:smallIcon="@mipmap/ic_launcher"
