Set max auto heartbeat interval to 15min https://github.com/microg/GmsCore/commit/1e96dd137eae86bbf3be3ca72a6345fa837ad8ff

--- a/play-services-core/src/main/res/xml/preferences_gcm_advanced.xml
+++ b/play-services-core/src/main/res/xml/preferences_gcm_advanced.xml
@@ -23,6 +23,7 @@
 
         <ListPreference
             android:defaultValue="0"
+            android:persistent="false"
             android:entries="@array/gcm_network_config_names"
             android:entryValues="@array/gcm_network_config_values"
             android:key="gcm_network_mobile"
@@ -31,6 +32,7 @@
 
         <ListPreference
             android:defaultValue="0"
+            android:persistent="false"
             android:entries="@array/gcm_network_config_names"
             android:entryValues="@array/gcm_network_config_values"
             android:key="gcm_network_wifi"
@@ -39,6 +41,7 @@
 
         <ListPreference
             android:defaultValue="0"
+            android:persistent="false"
             android:entries="@array/gcm_network_config_names"
             android:entryValues="@array/gcm_network_config_values"
             android:key="gcm_network_roaming"
@@ -47,6 +50,7 @@
 
         <ListPreference
             android:defaultValue="0"
+            android:persistent="false"
             android:entries="@array/gcm_network_config_names"
             android:entryValues="@array/gcm_network_config_values"
             android:key="gcm_network_other"
