Add basic Google account settings https://github.com/microg/GmsCore/commit/dcf5f1fecb9add7e640a6bb780cb0c752e5c025e

--- a/play-services-core/src/main/res/xml/preferences_auth.xml
+++ b/play-services-core/src/main/res/xml/preferences_auth.xml
@@ -36,4 +36,11 @@
             android:action="@string/var_pref_auth_action_preferences_settings"
             android:targetPackage="@string/var_pref_start_gms_package" />
     </PreferenceScreen>
+    <PreferenceScreen
+        android:key="legacy"
+        android:title="Legacy settings">
+        <intent
+            android:targetClass="org.microg.gms.ui.LegacyAccountSettingsActivity"
+            android:targetPackage="@string/var_pref_start_gms_package" />
+    </PreferenceScreen>
 </PreferenceScreen>
