--- a/play-services-core/src/main/res/xml/preferences_auth.xml
+++ b/play-services-core/src/main/res/xml/preferences_auth.xml
@@ -40,6 +40,7 @@
         android:key="legacy"
         android:title="Legacy settings">
         <intent
+            android:action="android.intent.action.VIEW"
             android:targetClass="org.microg.gms.ui.LegacyAccountSettingsActivity"
             android:targetPackage="@string/var_pref_start_gms_package" />
     </PreferenceScreen>
