--- a/play-services-core/src/main/res/xml/preferences_start.xml
+++ b/play-services-core/src/main/res/xml/preferences_start.xml
@@ -16,7 +16,7 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <PreferenceCategory android:title="@string/prefcat_google_services">
+    <PreferenceCategory android:title="@string/prefcat_google_services" android:key="prefcat_google_services">
         <Preference
             android:icon="@drawable/ic_add_account"
             android:summary="@string/pref_add_account_summary"
@@ -48,7 +48,7 @@
             android:icon="@drawable/ic_baseline_hide_source_24"
             android:defaultValue="true"/>
     </PreferenceCategory>
-    <PreferenceCategory android:layout="@layout/preference_category_no_label">
+    <PreferenceCategory android:layout="@layout/preference_category_no_label" android:key="prefcat_footer">
         <Preference
             android:icon="@drawable/ic_info_outline"
             android:key="pref_about"
